# adaptive-ai-cyber-threat

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: database_config.yaml  logging_config.yaml  model_config.yaml  settings.yaml
docs/: deployment_guide.md
docs/requirements/: SRS.md
mobile-app/: BUILD_APK.md  README.md  capacitor.config.json  package.json
mobile-app/android/: build.gradle  settings.gradle
mobile-app/android/app/: build.gradle
mobile-app/android/app/src/main/: AndroidManifest.xml
mobile-app/android/app/src/main/java/com/cybershield/ai/: MainActivity.java
mobile-app/android/app/src/main/res/values/: colors.xml  styles.xml
mobile-app/www/: index.html
mobile-app/www/css/: mobile.css
mobile-app/www/js/: app.js
scripts/: init_db.py  verify_setup.py
src/api/: main.py  schemas.py
src/api/middleware/: error_handler.py
src/api/routes/: analytics.py  detection.py  reports.py
src/core/: __init__.py  base_model.py  config.py  constants.py  exceptions.py  logger.py
src/dashboard/: app.py
src/data/: __init__.py  cleaner.py  downloader.py  eda.py  feature_engineer.py
src/database/: __init__.py  models.py  repository.py
src/explainability/: __init__.py  explainer.py
src/fusion/: __init__.py  threat_fusion.py
src/models/login_behaviour/: login_detector.py
src/models/malicious_url/: url_detector.py
src/models/network_anomaly/: __init__.py  network_detector.py
src/models/phishing/: classical_model.py  distilbert_model.py  inference_engine.py
src/reports/: __init__.py  report_generator.py
tests/integration/: test_api.py
tests/unit/: test_database.py  test_feature_engineer.py  test_fusion.py
tests/unit/core/: test_config.py  test_constants.py  test_exceptions.py
